--- a/css/style.css
+++ b/css/style.css
@@ -1014,7 +1014,7 @@ ul {
 .form-wrapper .left {
   width: 50%;
   height: auto;
-  background: rgba(255, 255, 255, 0.1) url("../img/photo1.jpg") no-repeat center top;
+  background: rgba(255, 255, 255, 0.1) url("../img/photo.jpg") no-repeat center top;
   background-blend-mode: hard-light;
   background-size: cover;
 }
